force-app/main/default/objects/unit_hold_request__c/unit_hold_request__c.object-meta.xml
<CustomObject>
    <label>New Sale Approval</label>
    <nameField>
        <displayFormat>N-{0000}</displayFormat>
        <label>New Sale Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>New Sale Approvals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>