force-app/main/default/objects/unit_hold_request__c/fields/Address1__c.field-meta.xml
<CustomField>
    <fullName>Address1__c</fullName>
    <label>Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>