force-app/main/default/objects/unit_hold_request__c/fields/Applicant_Email_Id1__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Email_Id1__c</fullName>
    <label>Applicant Email Id</label>
    <type>Email</type>
</CustomField>