force-app/main/default/objects/unit_hold_request__c/fields/Applicant_Mobile_Number4__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Mobile_Number4__c</fullName>
    <label>Applicant Mobile Number</label>
    <type>Phone</type>
</CustomField>