force-app/main/default/objects/unit_hold_request__c/fields/Applicant_Name3__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Name3__c</fullName>
    <label>Applicant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>