force-app/main/default/objects/unit_hold_request__c/fields/Approval_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date_and_Time__c</fullName>
    <formula>Payment_Request__r.Approved_Date_and_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Date and Time</label>
    <type>DateTime</type>
</CustomField>