force-app/main/default/objects/unit_hold_request__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved by Sales VP</fullName>
            </value>
            <value>
                <fullName>Approved by Sales Ops</fullName>
            </value>
            <value>
                <fullName>Rejected by Sales VP</fullName>
            </value>
            <value>
                <fullName>Rejected by Sales Ops</fullName>
            </value>
            <value>
                <fullName>Approved by Sales Head</fullName>
            </value>
            <value>
                <fullName>Rejected by Sales Head</fullName>
            </value>
            <value>
                <fullName>Approved by SVP</fullName>
            </value>
            <value>
                <fullName>Rejected by SVP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>