force-app/main/default/objects/unit_hold_request__c/fields/Blocking_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Blocking_Amount_Paid__c</fullName>
    <label>Blocking Amount Paid:</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>