force-app/main/default/objects/unit_hold_request__c/fields/Booked_Date__c.field-meta.xml
<CustomField>
    <fullName>Booked_Date__c</fullName>
    <description>Aditya: Created as part SBTR implementation</description>
    <label>Booked Date</label>
    <type>Date</type>
</CustomField>