force-app/main/default/objects/unit_hold_request__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>New Sale Approvals</relationshipLabel>
    <relationshipName>New_Sale_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>