force-app/main/default/objects/unit_hold_request__c/fields/Booking_Form_To_be_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Booking_Form_To_be_Created_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Form To be Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>New_Sale_Approvals4</relationshipName>
    <type>Lookup</type>
</CustomField>