force-app/main/default/objects/unit_hold_request__c/fields/Broker_CPID__c.field-meta.xml
<CustomField>
    <fullName>Broker_CPID__c</fullName>
    <formula>CP_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker CPID</label>
    <type>Text</type>
</CustomField>