force-app/main/default/objects/unit_hold_request__c/fields/Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>Broker_Name__c</fullName>
    <formula>IF(Opportunity__r.Channel_Partner__r.Name != null,&quot;Opportunity__r.Channel_Partner__r.Name&quot;,null)</formula>
    <label>Broker Name</label>
    <type>Text</type>
</CustomField>