force-app/main/default/objects/unit_hold_request__c/fields/Client_Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Client_Phone_No__c</fullName>
    <label>Client Phone No</label>
    <type>Phone</type>
</CustomField>