force-app/main/default/objects/unit_hold_request__c/fields/CP_from_Booking__c.field-meta.xml
<CustomField>
    <fullName>CP_from_Booking__c</fullName>
    <formula>Booking__r.Channel_Partner__r.Name</formula>
    <label>CP from Booking</label>
    <type>Text</type>
</CustomField>