force-app/main/default/objects/unit_hold_request__c/fields/CP_ID__c.field-meta.xml
<CustomField>
    <fullName>CP_ID__c</fullName>
    <label>CP ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>