force-app/main/default/objects/unit_hold_request__c/fields/Date_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Date_Rejected__c</fullName>
    <label>Date Rejected</label>
    <type>Date</type>
</CustomField>