force-app/main/default/objects/unit_hold_request__c/fields/Deal_Type_Wholesale_Retail__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type_Wholesale_Retail__c</fullName>
    <label>Deal Type (Wholesale/Retail)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wholesale</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>