force-app/main/default/objects/unit_hold_request__c/fields/Discounted_Sales_Value__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Sales_Value__c</fullName>
    <formula>IF(
Discount__c &gt; 0,
Sales_Value__c - (Sales_Value__c * Discount__c),
null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discounted Sales Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>