force-app/main/default/objects/unit_hold_request__c/fields/Downtime_Mock_NSA_ID__c.field-meta.xml
<CustomField>
    <fullName>Downtime_Mock_NSA_ID__c</fullName>
    <label>Downtime Mock NSA ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>