force-app/main/default/objects/unit_hold_request__c/fields/DP_Amount__c.field-meta.xml
<CustomField>
    <fullName>DP_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DP Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>