force-app/main/default/objects/unit_hold_request__c/fields/How_Many_Applicants__c.field-meta.xml
<CustomField>
    <fullName>How_Many_Applicants__c</fullName>
    <label>How Many Applicants</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Applicant</fullName>
            </value>
            <value>
                <fullName>Two Applicants</fullName>
            </value>
            <value>
                <fullName>Three Applicants</fullName>
            </value>
            <value>
                <fullName>Four Applicants</fullName>
            </value>
            <value>
                <fullName>Five Applicants</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>