force-app/main/default/objects/unit_hold_request__c/fields/Old_Unit_No__c.field-meta.xml
<CustomField>
    <fullName>Old_Unit_No__c</fullName>
    <label>Old Unit No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>