force-app/main/default/objects/unit_hold_request__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filterItems>
        <filterItems>
            <field>Opportunity.Is_Closing_In_Future__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>New Sale Approvals</relationshipLabel>
    <relationshipName>unit_hold_requests</relationshipName>
    <type>Lookup</type>
</CustomField>