force-app/main/default/objects/unit_hold_request__c/fields/Other_Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Other_Payment_Plan__c</fullName>
    <label>Other Payment Plan</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>