force-app/main/default/objects/unit_hold_request__c/fields/Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Plan</label>
    <referenceTo>Payment_Plan__c</referenceTo>
    <relationshipLabel>unit hold requests</relationshipLabel>
    <relationshipName>unit_hold_requests</relationshipName>
    <type>Lookup</type>
</CustomField>