force-app/main/default/objects/unit_hold_request__c/fields/Payment_Request__c.field-meta.xml
<CustomField>
    <fullName>Payment_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>https://ceptessobha.atlassian.net/browse/SOB-133</description>
    <label>Payment Request</label>
    <referenceTo>Payment_Request__c</referenceTo>
    <relationshipLabel>New Sale Approvals</relationshipLabel>
    <relationshipName>New_Sale_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>