force-app/main/default/objects/unit_hold_request__c/fields/Reason_for_Swap__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Swap__c</fullName>
    <label>Reason for Swap</label>
    <length>255</length>
    <type>Text</type>
</CustomField>