force-app/main/default/objects/unit_hold_request__c/fields/Rebate_from_Broker_If_any__c.field-meta.xml
<CustomField>
    <fullName>Rebate_from_Broker_If_any__c</fullName>
    <label>Rebate from Broker(If any)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>