force-app/main/default/objects/unit_hold_request__c/fields/Receipt_Creation_Error_Log__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Creation_Error_Log__c</fullName>
    <label>Receipt Creation Error Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>