force-app/main/default/objects/unit_hold_request__c/fields/Sales_Head__c.field-meta.xml
<CustomField>
    <fullName>Sales_Head__c</fullName>
    <formula>Units_Hold_Request_Form__r.Channel_Partner__r.Sales_Manager_s_Line_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Head</label>
    <type>Text</type>
</CustomField>