force-app/main/default/objects/unit_hold_request__c/fields/Sales_Head_SVP__c.field-meta.xml
<CustomField>
    <fullName>Sales_Head_SVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Head SVP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>New_Sale_Approvals5</relationshipName>
    <type>Lookup</type>
</CustomField>