force-app/main/default/objects/unit_hold_request__c/fields/Sales_Manager_Value__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Value__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>New_Sale_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>