force-app/main/default/objects/unit_hold_request__c/fields/SalesOps_Comments__c.field-meta.xml
<CustomField>
    <fullName>SalesOps_Comments__c</fullName>
    <inlineHelpText>This is for SalesOps team</inlineHelpText>
    <label>SalesOps Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>