force-app/main/default/objects/unit_hold_request__c/fields/Salutation1__c.field-meta.xml
<CustomField>
    <fullName>Salutation1__c</fullName>
    <label>Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mr</fullName>
            </value>
            <value>
                <fullName>Mrs</fullName>
            </value>
            <value>
                <fullName>M/s</fullName>
            </value>
            <value>
                <fullName>Ms</fullName>
            </value>
            <value>
                <fullName>DR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>