force-app/main/default/objects/unit_hold_request__c/fields/Secondary_CSO__c.field-meta.xml
<CustomField>
    <fullName>Secondary_CSO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary CSO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>New_Sale_Approvals8</relationshipName>
    <type>Lookup</type>
</CustomField>