force-app/main/default/objects/unit_hold_request__c/fields/Secondary_Sales_Head__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Sales_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Sales Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>New_Sale_Approvals7</relationshipName>
    <type>Lookup</type>
</CustomField>