force-app/main/default/objects/unit_hold_request__c/fields/SO_Verified_By__c.field-meta.xml
<CustomField>
    <fullName>SO_Verified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SO-Verified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>New_Sale_Approvals9</relationshipName>
    <type>Lookup</type>
</CustomField>