force-app/main/default/objects/unit_hold_request__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <formula>IF(Units_Hold_Request_Form__r.Channel_Partner__r.Name != NULL, Units_Hold_Request_Form__r.Channel_Partner__r.Name, Units_Hold_Request_Form__r.Sobha_Connect__r.Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source</label>
    <type>Text</type>
</CustomField>