force-app/main/default/objects/unit_hold_request__c/fields/Split_Deal__c.field-meta.xml
<CustomField>
    <fullName>Split_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Split Deal</label>
    <type>Checkbox</type>
</CustomField>