force-app/main/default/objects/unit_hold_request__c/validationRules/Opportunity_booking_should_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_booking_should_be_blank</fullName>
    <active>true</active>
    <description>Opportunity&apos;s booking should be blank while creating new Sale Approval</description>
    <errorConditionFormula>AND(ISNEW() ,Opportunity__c != null &amp;&amp; Opportunity__r.Booking__c != null)</errorConditionFormula>
    <errorMessage>Please select an opportunity without booking</errorMessage>
</ValidationRule>