force-app/main/default/objects/unit_hold_request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Booked_Date__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>DLD_Amount__c</columns>
    <columns>DP_Amount__c</columns>
    <columns>Unit__c</columns>
    <columns>Approved_Date__c</columns>
    <columns>Booking__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Reason_for_Swap__c</columns>
    <columns>Broker_CPID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>